Our own tabbing, z-index fix && required styling
Tabs all work correctly now
The bottom button isn't above other things
Required stands out a bit more

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,6 +23,17 @@ button[type="submit"] {
   }
 }
 
+.button, button {
+  z-index: 10;
+}
+
+label small, .error > label > small {
+  font-weight: 700;
+  //color: red;
+  font-size: 75%;
+  margin-left: 1em;
+}
+
 .people-container, .accounts-container, .specs-container, .versions-container {
   height: 16rem;
 }
